--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,81 +3,63 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+@article{KUMARREDDYBANNURU2022,
+title = {Freestanding 3D piezoelectric PVDF sensors via electroprinting},
+journal = {Materials Today: Proceedings},
+year = {2022},
+issn = {2214-7853},
+doi = {https://doi.org/10.1016/j.matpr.2022.09.364},
+url = {https://www.sciencedirect.com/science/article/pii/S2214785322061806},
+author = {Kranthi {Kumar Reddy Bannuru} and Aby {Raj Plamootil Mathai} and Pablo {Valdivia y Alvarado} and Hong {Yee Low}},
+keywords = {Electroprinting, PVDF solution, 3D printing, Diw, Piezoelectric, Electrohydrodynamics},
+abstract = {Polyvinylidene fluoride, PVDF is a soft piezoelectric material with potential applications in robotic sensors and actuators, wearable electronics, and energy harvesting. The sensitivity of piezoelectric PVDF is attributed primarily to the β-crystalline phase with oriented dipoles. 3D electroprinting process is a promising technique to achieve 3D PVDF-based piezoelectric devices because the combined mechanical stretching and electric field-assisted poling can improve the electroactive crystalline phases in PVDF. In this work, we show that the incorporation of an anti-solvent in the PVDF solution was instrumental in obtaining an optimum solution viscosity and solvent evaporation rate to achieve mechanically stable layer-by-layer printing. Two major process parameters further influencing the resolution of the printed structure were nozzle-to-collector distance and extrusion pressure. Freestanding 3D PVDF structures with an average individual layer height as small as 30 µm and continuous prints for multiple 3D designs have been achieved. FTIR and XRD spectra show an improvement in the electroactive β and γ phases in the electroprinted PVDF compared to the dominant α phase of PVDF powder. Furthermore, the 3D PVDF structures display sensitivity to various load profiles at varying frequencies with the piezoelectric voltage coefficient (g33) range between 1.72E-4 and 4.08E-4 V.m/N.}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{Ding2018,
+  doi = {10.1002/admt.201800135},
+  url = {https://doi.org/10.1002/admt.201800135},
+  year = {2018},
+  month = sep,
+  publisher = {Wiley},
+  volume = {3},
+  number = {11},
+  pages = {1800135},
+  author = {Meng Ding and Kranthi K. R. Bannuru and Ye Wang and Lu Guo and Avinash Baji and Hui Ying Yang},
+  title = {Free-Standing Electrodes Derived from Metal-Organic Frameworks/ Nanofibers Hybrids for Membrane Capacitive Deionization},
+  journal = {Advanced Materials Technologies}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  selected={true}
+@article{Parekh2018,
+  doi = {10.3390/membranes8030059},
+  url = {https://doi.org/10.3390/membranes8030059},
+  year = {2018},
+  month = aug,
+  publisher = {{MDPI} {AG}},
+  volume = {8},
+  number = {3},
+  pages = {59},
+  author = {Shalv Parekh and Rebecca David and Kranthi Bannuru and Lakshminarasimhan Krishnaswamy and Avinash Baji},
+  title = {Electrospun Silver Coated Polyacrylonitrile Membranes for Water Filtration Applications},
+  journal = {Membranes}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{Khan2010,
+  doi = {10.1016/j.tet.2010.07.075},
+  url = {https://doi.org/10.1016/j.tet.2010.07.075},
+  year = {2010},
+  month = sep,
+  publisher = {Elsevier {BV}},
+  volume = {66},
+  number = {39},
+  pages = {7762--7772},
+  author = {Abu T. Khan and Md. Musawwer Khan and Kranthi K.R. Bannuru},
+  title = {Iodine catalyzed one-pot five-component reactions for direct synthesis of densely functionalized piperidines},
+  journal = {Tetrahedron}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
+
+
+
+
