--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,6 @@
 ---
 ---
-
-# @string{aps = {American Physical Society,}}
+#preview={brownian-motion.gif}
 
 @article{KUMARREDDYBANNURU2022,
 title = {Freestanding 3D piezoelectric PVDF sensors via electroprinting},
